--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,8 @@ dependencies = [
 semantic = [
     "sentence-transformers>=2.2.2",
     "torch>=2.0.0",
+    "tabulate>=0.9.0",
+    "numpy>=1.24.0",
 ]
 dev = [
     "pytest>=8.0.0",
